[gd_scene load_steps=67 format=2]

[ext_resource path="res://MainCharacter/FatManMainCharacter.png" type="Texture" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://MainCharacter/FatManMainCharacter-SheetLeft.png" type="Texture" id=3]
[ext_resource path="res://MainCharacter/FatManMainCharacter-SheetRight.png" type="Texture" id=4]
[ext_resource path="res://MainCharacter/FatBoyWalkingLeft-Sheet.png" type="Texture" id=5]
[ext_resource path="res://MainCharacter/FatBoyWalkingRight-Sheet.png" type="Texture" id=6]
[ext_resource path="res://fatboyHealth-Sheet.png" type="Texture" id=7]
[ext_resource path="res://ROBO.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://PlayerHUD.tscn" type="PackedScene" id=10]
[ext_resource path="res://MainCharacter/ClassicSwordMovementRight-Sheet.png" type="Texture" id=11]
[ext_resource path="res://MainCharacter/BasicAttack-Sheet.png" type="Texture" id=12]
[ext_resource path="res://HealthSprite.gd" type="Script" id=13]
[ext_resource path="res://MainCharacter/FatBoyDamageTaken-Sheet.png" type="Texture" id=14]
[ext_resource path="res://MainCharacter/Player_Die_Animation-Sheet.png" type="Texture" id=15]

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "basic_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "damage_taken",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "die_animation",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": true,
"name": "idle_sword",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "sword_right",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.0
height = 18.0

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=24]
size = 12
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 34, 10 )

[sub_resource type="CapsuleShape2D" id=44]
radius = 24.0

[node name="MainCharacter" type="Node2D"]

[node name="FatBoyBody" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="FatBoyBody"]
frames = SubResource( 1 )
animation = "die_animation"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FatBoyBody"]
position = Vector2( 2, -1 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="FatBoyBody"]
position = Vector2( 0, -56 )
current = true
zoom = Vector2( 0.6, 0.6 )

[node name="HealthSprite" type="AnimatedSprite" parent="FatBoyBody"]
position = Vector2( -160, -168 )
frames = SubResource( 23 )
frame = 3
speed_scale = 0.9
playing = true
script = ExtResource( 13 )

[node name="Label" type="Label" parent="FatBoyBody/HealthSprite"]
margin_left = 30.0
margin_top = -0.666672
margin_right = 70.0
margin_bottom = 13.3333
custom_fonts/font = SubResource( 24 )
text = "100"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="FatBoyBody"]
bus = "Jump"

[node name="PlayerHUD" parent="FatBoyBody" instance=ExtResource( 10 )]
margin_left = -236.0
margin_top = -212.0
margin_right = 197.0
margin_bottom = -212.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="WeaponBody" type="Area2D" parent="FatBoyBody"]

[node name="WeaponCollision" type="CollisionShape2D" parent="FatBoyBody/WeaponBody" groups=["weapon_attack"]]
position = Vector2( 24, 0 )
shape = SubResource( 43 )
disabled = true

[node name="PlayerBodyArea" type="Area2D" parent="FatBoyBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FatBoyBody/PlayerBodyArea"]
shape = SubResource( 44 )

[node name="DamageDelayTimer" type="Timer" parent="FatBoyBody"]

[connection signal="animation_finished" from="FatBoyBody/AnimatedSprite" to="FatBoyBody" method="_on_AnimatedSprite_animation_finished"]
[connection signal="finished" from="FatBoyBody/AudioStreamPlayer2D" to="FatBoyBody" method="_on_AudioStreamPlayer2D_finished"]
[connection signal="area_entered" from="FatBoyBody/PlayerBodyArea" to="FatBoyBody" method="_on_PlayerBodyArea_area_entered"]
